--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
   }
 }
 </script>
+<style>
+  @keyframes fadeIn {
+    from { opacity: 0; transform: translateY(10px); }
+    to { opacity: 1; transform: translateY(0); }
+  }
+  .animate-fadeIn {
+    animation: fadeIn 0.8s ease-out forwards;
+  }
+</style>
 </head>
   <body class="bg-gray-900 text-white">
     <div id="root"></div>
